[package]
name = "bevy_ld_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_render = "0.8.1"
bevy-inspector-egui = "0.13.0"

# Bevy optimization settings
# in `Cargo.toml` or `.cargo/config.toml`
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# Even better release performance at compile time cost
[profile.release]
lto = "thin"
